Add dist option

--- a/explore.ipynb
+++ b/explore.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,13 +27,18 @@
     "    \"sorted\": \"sorted\"\n",
     "}\n",
     "\n",
+    "dists = [\n",
+    "    \"uniform-random\",\n",
+    "    \"reversed\"\n",
+    "]\n",
+    "\n",
     "interval = \"100000\"\n",
     "max_n    = \"10000000\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -73,14 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "make: `main' is up to date.\r\n"
+      "g++ -std=c++11 -O0 main.cpp -o main\r\n"
      ]
     }
    ],
@@ -91,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,11 +105,14 @@
     "    xyss[algo] = {}\n",
     "    cmd, subalgos = algos[algo]\n",
     "    for subalgo in subalgos:\n",
-    "        output = !$cmd $subalgo $interval $max_n\n",
-    "        xys = [tuple(l.split()) for l in output ]\n",
-    "        xs = [float(x) for x, _ in xys]\n",
-    "        ys = [float(y) for _, y in xys]\n",
-    "        xyss[algo][subalgo] = (xs, ys)"
+    "        xyss[algo][subalgo] = {}\n",
+    "        for dist in dists:\n",
+    "            print(\"Testing %s %s %s %s %s\" % (cmd, subalgo, interval, max_n, dist))\n",
+    "            output = !$cmd $subalgo $interval $max_n $dist\n",
+    "            xys = [tuple(l.split()) for l in output ]\n",
+    "            xs = [float(x) for x, _ in xys]\n",
+    "            ys = [float(y) for _, y in xys]\n",
+    "            xyss[algo][subalgo][dist] = (xs, ys)"
    ]
   },
   {
